[gd_scene load_steps=7 format=2]

[ext_resource path="res://fonts/mukta/Mukta_16.tres" type="DynamicFontData" id=1]
[ext_resource path="res://save/settings.gd" type="Script" id=2]
[ext_resource path="res://buttons/button-hover-01.tres" type="StyleBox" id=3]
[ext_resource path="res://buttons/button-pressed-01.tres" type="StyleBox" id=4]
[ext_resource path="res://buttons/button-normal-01.tres" type="StyleBox" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
outline_color = Color( 0, 0, 0, 0.431373 )
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
color = Color( 0, 0, 0, 0.490196 )

[node name="Options" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsBorder" type="ColorRect" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -76.0
margin_right = 66.0
margin_bottom = 76.0
color = Color( 0.596078, 0.580392, 0.443137, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsBG" type="ColorRect" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -65.0
margin_top = -75.0
margin_right = 65.0
margin_bottom = 75.0
color = Color( 0.309804, 0.305882, 0.27451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="VBoxContainer" parent="Options"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -55.0
margin_top = -62.0
margin_right = 55.0
margin_bottom = 66.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FastModeBtn" type="Button" parent="Options/HBoxContainer"]
margin_right = 110.0
margin_bottom = 29.0
focus_mode = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.709804, 0.686275, 0.529412, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
enabled_focus_mode = 0
text = "Fast Mode OFF"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundBtn" type="Button" parent="Options/HBoxContainer"]
margin_top = 33.0
margin_right = 110.0
margin_bottom = 62.0
focus_mode = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.709804, 0.686275, 0.529412, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
enabled_focus_mode = 0
text = "Sounds ON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicBtn" type="Button" parent="Options/HBoxContainer"]
margin_top = 66.0
margin_right = 110.0
margin_bottom = 95.0
focus_mode = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 0.709804, 0.686275, 0.529412, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
toggle_mode = true
enabled_focus_mode = 0
text = "Music ON"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackBtn" type="Button" parent="Options/HBoxContainer"]
margin_top = 99.0
margin_right = 110.0
margin_bottom = 128.0
focus_mode = 0
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/disabled = ExtResource( 5 )
custom_styles/normal = ExtResource( 5 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color_disabled = Color( 1, 1, 1, 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
enabled_focus_mode = 0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}
